<resources>
    <string name="facebook_app_id">1794713960795241</string>
    <string name="password">Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Register">Register</string>
    <string name="app_name">The Elucidated</string>
    <string name="title_activity_maps">Map</string>
    <string name="TransCoders_Organization">TransCoders Organization</string>
    <string name="Δημήτρης_Νικολαΐδης">Δημήτρης Νικολαΐδης</string>
    <string name="Τιλσίζογλου_Αναστάσιος">Τιλσίζογλου Αναστάσιος</string>
    <string name="Δαμιανός_Ανκιντίν">Δαμιανός Ανκιντίν</string>
    <string name="Αναστάσιος_Γυμνόπουλος">Αναστάσιος Γυμνόπουλος</string>
    <string name="Γιάννης_Δημητριάδης">Γιάννης Δημητριάδης</string>
    <string name="Αλέξανδρος_Χατζής">Αλέξανδρος Χατζής</string>
    <string name="Μαγδαληνή_Κόιου">Μαγδαληνή Κόιου</string>
    <string name="New_Game">New Game</string>
    <string name="Load_Game">Load Game</string>
    <string name="First_Steps">First Steps</string>
    <string name="About">About</string>
    <string name="Continue">Continue</string>
    <string name="description">AppIcon</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Territory">Territory</string>
    <string name="Music">Music</string>
    <string name="find_item">Find Item</string>
    <string name="change_map_type">Change Map Type</string>
    <string name="select_map_type">Select Map Type</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="terrain">Terrain</string>
    <string name="options">options</string>
    <string name="map">Map</string>
    <string name="pick_item">Pick Item</string>
    <string name="inventory">Inventory</string>
    <string-array name="Territories">
        <item>Νομός Αιτωλοακαρνανίας</item>
        <item>Νομός Αργολίδας</item>
        <item>Νομός Αρκαδίας</item>
        <item>Νομός Άρτας</item>
        <item>Νομός Αττικής</item>
        <item>Νομός Αχαΐας</item>
        <item>Νομός Βοιωτίας</item>
        <item>Νομός Γρεβενών</item>
        <item>Νομός Δράμας</item>
        <item>Νομός Δωδεκανήσου</item>
        <item>Νομός Έβρου</item>
        <item>Νομός Εύβοιας</item>
        <item>Νομός Ευρυτανίας</item>
        <item>Νομός Ζακύνθου</item>
        <item>Νομός Ηλείας</item>
        <item>Νομός Ημαθίας</item>
        <item>Νομός Ηρακλείου</item>
        <item>Νομός Θεσπρωτίας</item>
        <item>Νομός Θεσσαλονίκης</item>
        <item>Νομός Ιωαννίνων</item>
        <item>Νομός Καβάλας</item>
        <item>Νομός Καρδίτσας</item>
        <item>Νομός Καστοριάς</item>
        <item>Νομός Κέρκυρας</item>
        <item>Νομός Κεφαλληνίας</item>
        <item>Νομός Κιλκίς</item>
        <item>Νομός Κοζάνης</item>
        <item>Νομός Κορινθίας</item>
        <item>Νομός Κυκλάδων</item>
        <item>Νομός Λακωνίας</item>
        <item>Νομός Λάρισας</item>
        <item>Νομός Λασιθίου</item>
        <item>Νομός Λέσβου</item>
        <item>Νομός Λευκάδας</item>
        <item>Νομός Μαγνησίας</item>
        <item>Νομός Μεσσηνίας</item>
        <item>Νομός Ξάνθης</item>
        <item>Νομός Πέλλας</item>
        <item>Νομός Πιερίας</item>
        <item>Νομός Πρέβεζας</item>
        <item>Νομός Ρεθύμνης</item>
        <item>Νομός Ροδόπης</item>
        <item>Νομός Σάμου</item>
        <item>Νομός Σερρών</item>
        <item>Νομός Τρικάλων</item>
        <item>Νομός Φθιώτιδας</item>
        <item>Νομός Φλώρινας</item>
        <item>Νομός Φωκίδας</item>
        <item>Νομός Χαλκιδικής</item>
        <item>Νομός Χανίων</item>
        <item>Νομός Χίου</item>
    </string-array>
    <string-array name="crime_scene">
        <item>Τι στοιχεία έχουμε στα χέρια μας;</item>
        <item>Τα μόνα στοιχεία που βρέθηκαν είναι το κινητό τηλέφωνο του θύματος,
              μία σφαίρα, σημάδι ότι ο φόνος έγινε με πιστόλι και ένα
              τραπουλόχαρτο με μία ανδρική φιγούρα που στην καρδιά είχε μία τρύπα σαν
              κάψιμο από τσιγάρο!</item>
    </string-array>
    <string-array name="crime_scene_chooser">
        <item>Να πάρω την σφαίρα;</item>
        <item>Να αφήσω την σφαίρα στον αστυνόμο;</item>
        <item>Να πάρω το τραπουλόχαρτο;</item>
        <item>Να αφήσω το τραπουλόχαρτο στον αστυνόμο;</item>
        <item>Να πάρω το κινητό;</item>
        <item>Να αφήσω το κινητό στον αστυνόμο;</item>
    </string-array>
    <string-array name="victims_bar">
        <item>Τι ώρα έφυγες από το μαγαζί;</item>
        <item>Την ώρα που έφευγα είδα το ρολόι μου και ήταν 4 τα ξημερώματα!</item>
        <item>Ο Π.Α. ήταν εδώ;</item>
        <item>Ναι έμεινε εδώ μέχρι το κλείσιμο!</item>
        <item>Παρατήρησες τίποτα περίεργο εκείνο το βράδυ;</item>
        <item>Κάποια στιγμή ήρθε ένας τύπος -ψηλός, μελαχρινός με σκυθρωπό πρόσωπο και φορούσε ένα
              μαύρο δερμάτινο- κρατώντας ένα κουτί και ζήτησε τον Π.Α.</item>
        <item>Τίποτα άλλο;</item>
        <item>Μετά τους είδα να κάθονται μαζί με τον λογιστή του στο τραπέζι μέχρι την ώρα που έφυγα.</item>
    </string-array>
    <string-array name="victims_home">
        <item>Ήρθα για να σας κάνω μερικές ερωτήσεις σχετικά με την δολοφονία του άντρα σας.</item>
        <item>Παρακαλώ περάστε, θα σας παρακαλούσα να είστε σύντομος, καταλαβαίνεται!</item>
        <item>Φυσικά, μήπως παρατηρήσατε τίποτα περίεργο τις τελευταίες μέρες;</item>
        <item>Το μόνο περίεργο που συνέβει ήταν όταν ήρθε ένας φάκελος μέσα στην εβδομάδα και όταν
              τον άνοιξε είδε μέσα έναν αναπτήρα, αλλά μόλις το είδε ταράχτηκε πάρα πολύ!</item>
        <item>Μπορώ να δω αυτόν τον φάκελο, παρακαλώ;</item>
        <item>Είναι μέσα στο γραφείο, έχει πάνω τα αρχικά Ν.Β.</item>
        <item>Σας ευχαριστώ κυρία μου για τον χρόνο σας.</item>
        <item>Εγώ σας ευχαριστώ</item>
    </string-array>
    <string-array name="victims_home_chooser">
        <item>Να πάρω το φάκελο;</item>
        <item>Να αφήσω τον φάκελο;</item>
        <item>Να ψάξω το γραφείο;</item>
    </string-array>
    <string-array name="desk_items">
        <item>Σημείωμα</item>
        <item>Λογιστικά βιβλία</item>
    </string-array>
    <string-array name="desk_items_chooser">
        <item>Να πάρω το σημείωμα;</item>
        <item>Να διαβάσω το σημείωμα και να το αφήσω;</item>
        <item>Να πάρω τα Λογιστικά βιβλία για περαιτέρω διερεύνηση;</item>
    </string-array>
    <string-array name="accountant">
        <item>Είστε ο τελευταίος άνθρωπος που ήρθε σε επαφή με το θύμα. Σας είχε πει
              τίποτα σχετικό με απειλές ή με χρωστούμενα που τυχόν να είχε?</item>
        <item>Όχι τίποτα απολύτως! Το μόνο που ίσως να σημαίνει κάτι είναι μια παλιά ιστορία
              που μου είχε πει ότι τον κυνηγούσαν για αρκετά χρήματα επειδή έπαιζε χαρτιά
              αλλά με αυτήν την ιστορία είχε τελειώσει, όπως μου είπε! </item>
        <item>Θυμάσαι να σου είχε πει το μέρος στο οποίο έπαιζε;</item>
        <item>Ναι φυσικά, μου είχε πει ότι έπαιζε σε μια χαρτοπαιχτική λέσχη τρεις δρόμους πιο κάτω,
              Ντάμα-Βαλές λέγεται!</item>
    </string-array>
    <string-array name="queen_jack_club">
        <item>Είστε ο ιδιοκτήτης της λέσχης;</item>
        <item>Μάλιστα, εγώ είμαι ο ιδιοκτήτης!</item>
        <item>Δολοφονήθηκε ο Π.Α. εχθές το βράδυ, τι ξέρετε για το θύμα που θα μπορούσε να
              βοηθήσει στην υπόθεση;</item>
        <item>Ο Π.Α. ερχόταν εδώ σχεδόν καθε βράδυ και έπαιζε μεγάλα ποσά και όταν τα έχανε
              ερχόταν και μας παρακαλούσε να τον δανείσουμε χρήματα για να συνεχίσει να παίζει.
              Εμείς του δανείζαμε αλλά αυτός δεν τα επέστρεφε ποτέ τα χρήματα.
              (ψηλός, μελαχρινός με σκυθρωπό πρόσωπο και φορούσε ένα μαύρο δερμάτινο)</item>
    </string-array>
    <string-array name="my_home">
        <item>YOU ARE GREAT !!!</item>
        <item>YOU ARE GREAT !!!</item>
        <item>YOU ARE GREAT !!!</item>
        <item>YOU ARE GREAT !!!</item>
    </string-array>
    <string-array name="thessaloniki_item">

        <item>university</item>
        <item>40.677737</item>
        <item>22.925500</item>

        <item>home</item>
        <item>40.630389</item>
        <item>22.943000</item>

        <item>hospital</item>
        <item>40.640063</item>
        <item>22.944419</item>

    </string-array>
    <string-array name="athena_item"></string-array>
    <string-array name="Student_home">
        <item>Καλημέρα σας.Θα θέλαμε να σας ενημερώσουμε πως εχθές το βράδυ
              βρέθηκε νεκρός ο συμφοιτητής σας Ν.Ι.μέσα στο σπίτι του.</item>
        <item>Μα πως; Τι έγινε;</item>
        <item>Μας ειδοποίησε η μητέρα του πως έχει να επικοινωνήσει μαζί της αρκετές μέρες.
        Έτσι στείλαμε μερικούς συναδέλφους στο σπίτι του.Δεν τους άνοι3ε και ετσι αναγκαστηκανε
        να σπάσουν την πόρτα.Όταν μπήκανε στο σπίτι ήταν νεκρός στο πάτωμα.Θελω να μου πείτε πότε
        επικοινωνλησατε τελευταία φορά μαζί του;</item>
        <item>Τον είδα πριν από 5 μέρες.Ήταν πολύ βιαστικός και κάπως κακόκεφος.</item>
        <item>Τότε πως εξηγείτε οτι μέσα στο κινητό που βρήκαμε ,το νουμερό σας
             βρέ8ηκε στις τελευταιές κλησης</item>
        <item>Τον είχα πάρει για να μου δώσει κάποιες σημειώσεις.</item>
        <item>Παρατηρήσατε κάτι παράξενο τον τελευταίο καιρό στη συμπεριφορά του;</item>
        <item>Τις τελευταίες μέρες ήταν κάπως τρομαγμένος και συνεχώς κοιτούσε το κινητό του.
            Κάποια στιγμή βέβαια τον είχα ακούσει να μιλάει με κάποιον στο τηλέφωνο , να λεει οτι
            θα του δώσει τα χρήματα το βραδυ και να τον περιμένει μπροστά στην κεντρική είσοδο του
            πανεπιστημίου.Δεν τον ρώτησα κάτι παραπάνω γιατι φαντάστηκα οτι παρήγγειλε κάτι απο το
            internet.
        </item>
    </string-array>
    <string-array name="Student_home_chooser">
        <item>
           Να πάρω τις σημειώσεις;
        </item>
    </string-array>
    <string-array name="Girlfriend_home">
            <item>Συγγνώμη για την ενόχληση, ήρθα να σας κάνω κάποιες ερωτήσεις σχετικά με τον φόνο
                  του Ν.Ι.</item>

        <item>Αποκλείεται ο Ν. είναι νεκρός; Τι μου λέτε τώρα;</item>
        <item>Εχθές το βράδυ τον βρήκαν κάποιοι συνάδερφοι νεκρό μέσα στο σπίτι του.</item>
        <item>Ωχ Θεέ μου..</item>
        <item>Πείτε μου αυτές τις μέρες είχατε δει κατι ασυνήθιστο στη συμπεριφορά του;</item>
        <item>Ο Ν.Ι. ήταν γενίκα ήσυχος άνθρωπος.Όμως τον τελευταίο καιρό είχε μπλέ3ει με κάτι παρέες
        ,με τις οποίες έπιναν και κάπνιζαν ως αργά.Πολλές φορές έπαιρνας και ναρκωτικά.</item>
            <item>Μάλιστα, καταλαβαίνω σας ευχαριστώ πολύ.Μιας που το πρόσεξα οι γόβες έχουν κάποιο
                σημάδι κάπου θα τις ακουμπήσατε.Αντίο σας</item>
        <item>Στο καλό Αστυνόμε</item>
    </string-array>
    <string-array name="Girlfriend_home_chooser">
        <item>Να πάρω τις γόβες?</item>
        <item>Να ψάξω το σπίτι?</item>

    </string-array>
    <string-array name="Hospital">
        <item>Καλησπέρα Σ.(ονομα γιατρου)τι συμπεράσματα έβγαλες από την νεκροψία?</item>
            <item>Αστυνόμε,οι τοξικολογικές έδειξαν μεγάλη ποσότητα ναρκωτικής ουσίας.Έχει ένα μεγάλο
            κόψιμο στο λαιμό, ύστερα από εκτιμήσεις μου μάλλον από κουζινομάχαιρο είναι,που
            είναι και η αιτία που πέθανε .Ελα να δεις κάτι που με παρεξένεψε.</item>
        <item>Τι Σ(ονομα γιατρου)?</item>
            <item>Έχει μπροστά στο κεφάλι όπως βλέπεις ένα χτύπημα από κάτι σαν τακούνι.Ήταν δυνατό το
            χτύπημα.Ο δράστης μάλλον το προκάλεσε για να τον ακινητοποιήσει.</item>
        <item>Μάλιστα Σ..Θα μιλήσουμε για οτι νεότερο.Καλή συνέχεια.</item>
    </string-array>
    <string-array name="Hospital_chooser">
        <item>Να δω τα σημάδια? </item>
        <item> Nα πάρω τον φάκελο με τις τοξικολογικές?</item>
        <item>Nα αφήσω τον φάκελο με τις τοξικολογικές?</item>
    </string-array>
</resources>