<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/Register" />


        <EditText
            android:id="@+id/Name_Edit_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/Name"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/Email_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Email"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/Name_Edit_Text" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/description"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="35sp"
            tools:text="@string/app_name"
            android:layout_marginBottom="18dp"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/Name_Edit_Text"
            android:text="@string/password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/Email_EditText"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText2"
            android:text="@string/Email"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginTop="15dp"
            android:layout_alignEnd="@+id/textView2" />


    </RelativeLayout>
</ScrollView>