<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/description"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="55sp"
            tools:text="@string/app_name" />

        <Button
            android:text="@string/Continue"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_width="match_parent"
            tools:text="@string/Continue"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:textAlignment="center"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/Name" />

        <TextView
            android:text="@string/Name"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textStyle="normal|bold"
            android:textAllCaps="false"
            tools:text="@string/Name"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/imageView"
            android:textAlignment="center"
            android:labelFor="@+id/editText"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText2"
            android:textAlignment="center"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/editText"
            android:contentDescription="@string/Email" />

        <TextView
            android:text="@string/Email"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_below="@+id/editText"
            android:layout_centerHorizontal="true"
            android:labelFor="@+id/editText2"/>

        <TextView
            android:text="@string/Territory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:labelFor="@+id/spinner"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_below="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />


    </RelativeLayout>
</ScrollView>